lab_05 | fix farm and conf update
